# aifw

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  MIT-LICENSE.txt  README-GUIDE.md  README.md  build.zig  docker-compose.yml  package.json  pnpm-workspace.yaml
.github/workflows/: aifw-ci.yml  aifw-presidio-backend.yml  aifw-release.yml  aifw-web.yml
aifw/: __main__.py
apps/webapp/: README.md  aifw-offline.html  index.html  package.json  vite.config.js
assets/: aifw.yaml  local-fake-llm-apikey.json  oneaifw_assets_hashes.json
browser_extension/: README.md  aifw-extension-sample.js  background.js  content.js  indexeddb-models.js  manifest.json  offscreen.html  offscreen.js  options.html  popup.html  popup.js
cli/: oneaifw_cli.py  requirements.txt
core/: NerRecognizer.zig  RegexRecognizer.zig  SpanMerger.zig  aifw_core.zig  merge_zh_addr.zig  recog_entity.zig  wasm_shims.zig
docs/: aifw-js_api_cn.md  oneaifw_services_api.md  oneaifw_services_api_cn.md  zh_address_design.md
libs/regex/: Cargo.toml
libs/regex/.cargo/: config.toml
libs/regex/src/: lib.rs
py-origin/: Dockerfile  README.md
services/: Dockerfile  README.md  docker-compose.yml  requirements.txt
test/: test_en_pii.anonymized.expected.txt
tests/: test_en_pii.anonymized.expected.txt  test_en_pii.txt  test_zh_pii.anonymized.expected.txt  test_zh_pii.txt  zh_address_dataset.txt
tools/: fetch_hf_models.py  gen_assets_sha3.py  requirements.txt  to-onnx-quanted.py
ui/: .desktop_app.py.swp  README.md  desktop_app.py
web/: Dockerfile  README.md  app.py  requirements.txt  run.py
(+55 files in other folders)
